[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/dialogue-box9patch.png" type="Texture" id=1]
[ext_resource path="res://scenes/dialogue/Dialogue.gd" type="Script" id=2]
[ext_resource path="res://sound/talk.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/dialogue/DialogueVoicePlayer.gd" type="Script" id=4]
[ext_resource path="res://scenes/dialogue/PauseCalculator.tscn" type="PackedScene" id=5]
[ext_resource path="res://font_theme.tres" type="Theme" id=6]

[node name="Dialogue" type="NinePatchRect"]
margin_top = -46.0
margin_right = 105.0
margin_bottom = -1.0
texture = ExtResource( 1 )
region_rect = Rect2( 1, 0, 16, 18 )
patch_margin_left = 6
patch_margin_top = 7
patch_margin_right = 6
patch_margin_bottom = 7
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="RichTextLabel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -41.0
margin_right = 102.0
margin_bottom = -4.0
theme = ExtResource( 6 )
custom_colors/default_color = Color( 0.00392157, 0.0862745, 0.129412, 1 )
custom_colors/font_color_selected = Color( 0.00392157, 0.0862745, 0.129412, 1 )
override_selected_font_color = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TypeTimer" type="Timer" parent="."]
wait_time = 0.025

[node name="PauseTimer" type="Timer" parent="."]

[node name="DialogueVoicePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -13.951
pitch_scale = 0.25
script = ExtResource( 4 )

[node name="PauseCalculator" parent="." instance=ExtResource( 5 )]

[connection signal="timeout" from="TypeTimer" to="." method="_on_TypeTimer_timeout"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_PauseTimer_timeout"]
[connection signal="finished" from="DialogueVoicePlayer" to="." method="_on_DialogueVoicePlayer_finished"]
[connection signal="pause_requested" from="PauseCalculator" to="." method="_on_PauseCalculator_pause_requested"]
